--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,12 @@
 {
-    "presets": ["env"]
+  "presets": [
+    [
+      "@babel/preset-env", {
+        "useESModules": true,
+        "targets": {
+          "node": "current"
+        }
+      }
+    ]
+  ]
 }
